Menu de inicio, para que permita elegir que desea el usuario

--- a/HTB4PatronesDiseñoCalculadora2/nbproject/project.properties
+++ b/HTB4PatronesDiseñoCalculadora2/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=htb4patronesdise\u00f1ocalculadora2.HTB4PatronesDise\u00f1oCalculadora2
+main.class=MainCalc
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
